[gd_scene load_steps=2 format=3 uid="uid://dn8p5kj2m9xwq"]

[ext_resource type="Script" path="res://godot_ui/scripts/effects/ScreenEffects.gd" id="1_effects"]

[node name="ScreenEffects" type="CanvasLayer"]
layer = 100
script = ExtResource("1_effects")

[node name="ShakeContainer" type="Node2D" parent="."]

[node name="FlashOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="VignetteOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="FeverTint" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.85, 0.5, 0)
